--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -2,7 +2,7 @@
 
 body{
   height: 100vh;
-  font-family: 'Fjalla One', sans-serif;
+  font-family: 'Fjalla One', 'Noto Sans TC', sans-serif;
 }
 
 img{
