--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
+
 html {
-  overflow-y: auto
+  --theme-color: #304030;
+  overflow-y: auto;
+}
+
+body {
+  font-family: 'Fjalla One', sans-serif;
+  color: white;
 }
